--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,22 @@
 *.dSYM/
 *.su
 
+# Text Backup Files #
+*.s[a-w][a-z]
 *~
+\#*\#
+.\#*
+
+# OS X Files #
+.DS_Store
+._*
+_*
+.Spotlight*
+.Trashes
+
+# Windows Files #
+Thumbs.db
+ehthumbs.db
+
+# Filenames with special characters
+**/*[\\/\:;*?!'"<>|$º•¶§∞¢£]*
